# JoyLabApp

./: .gitignore  App.tsx  README.md  app.json  main - Shortcut.lnk  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/: Podfile
ios/JoyLabApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/JoyLabApp.xcodeproj/: project.pbxproj
ios/JoyLabApp.xcodeproj/xcshareddata/xcschemes/: JoyLabApp.xcscheme
src/: README.md
src/backend/app/: db.py  main.py
src/backend/app/models/: settings.py  stats.py  user.py
src/backend/app/routes/: modes.py  pairing.py  settings.py  stats.py
src/backend/app/services/: supabase.ts
src/backend/firmware/ESP32JoyLab/: CMakeLists.txt  sdkconfig.old
src/backend/firmware/ESP32JoyLab/main/: main.c  (+7 more)
src/backend/firmware/ESP32JoyLabvF/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
src/backend/firmware/ESP32JoyLabvF/main/: Bluetooth.c  CMakeLists.txt  LED_Control.h  VibrationMotor.c  VibrationMotor.h  dotStar.c  dotStar.h  idf_component.yml  main.c
src/backend/firmware/ESP32JoyLabvF/main/include/: Bluetooth.h  Button_Control.h  ForceSensor_Control.h  Game_Control.h  IRS_Control.h  LED_Control.h  Sensory_Pad.h  Speaker_Control.h  VibrationMotor.h  buttonSound.h
src/backend/firmware/ESP32JoyLabvF/main/src/: Bluetooth.c  Button_Control.c  ForceSensor_Control.c  Game_Control.c  IRS_Control.c  LED_Control.c  Sensory_Pad.c  Speaker_Control.c  VibrationMotor.c  buttonSound.c  dotStar.c
src/backend/firmware/ESP32JoyLabvF/main/vl53l0x/VL53L0X_1.0.4/Api/platform/inc/: vl53l0x_i2c_platform.h
src/backend/firmware/ESP32JoyLabvF/main/vl53l0x/VL53L0X_1.0.4/Api/platform/src/: vl53l0x_i2c_platform.c  vl53l0x_platform.c  vl53l0x_platform_log.c
src/backend/firmware/ESP32WristBand/: CMakeLists.txt
src/frontend/: JoyLab.tsx
src/frontend/context/: AuthContext.tsx
src/frontend/navigation/: AppNavigator.tsx  GameModesStack.tsx
src/frontend/screens/: AuthLandingScreen.tsx  DualModeScreen.tsx  GameModes.tsx  GameModesScreen.tsx  HomeScreen.tsx  LEDModeScreen.tsx  LogInScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx  SignUpScreen.tsx  SoundModeScreen.tsx  StatisticsScreen.tsx  SupaBaseTestScreen.tsx  TestScreen.tsx
src/frontend/services/: BLEService.ts  BLEWristBandService.ts  authService.ts
(+17 files in other folders)
